test_regress/t/t_class_null_bad.out
%Error: t/t_class_null_bad.v:15: Null pointer dereferenced
Aborting...
